--- a/css/index.styl
+++ b/css/index.styl
@@ -25,6 +25,14 @@ body, html
   height   100%
   overflow hidden
 
+// Fixes form controls not working on iOS Web Clips
+input, textarea, select
+  -webkit-user-select text !important
+  -khtml-user-select  text !important
+  -moz-user-select    text !important
+  -ms-user-select     text !important
+  user-select         text !important
+
 // Parts
 
 body
